fix: overflow on body

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body[data-darkmode="true"] {
 
 html {
     color-scheme: dark;
+    overflow-x: hidden;
 }
 
 html:has(body[data-darkmode=false]) {
